<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/parking"
    android:orientation="vertical"
    tools:context=".ParkingOne">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/white"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/plot"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/parking"
        android:backgroundTint="@color/blue"
        android:textSize="20sp"/>

        <Button
            android:id="@+id/plot2"
            android:layout_width="130dp"
            android:layout_height="120dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_toEndOf="@+id/plot"
            android:backgroundTint="@color/blue"
            android:ems="10"
            android:text="@string/parking2"
            android:textColor="@color/white"
            android:textSize="20sp" />
    <Button
        android:id="@+id/plot3"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_below="@+id/plot"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:ems="10"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/parking3"
        android:backgroundTint="@color/blue"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/plot4"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_below="@+id/plot2"
        android:layout_toEndOf="@+id/plot3"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:layout_marginLeft="30dp"
        android:textColor="@color/white"
        android:layout_marginRight="30dp"
        android:text="@string/parking4"
        android:backgroundTint="@color/blue"
        android:textSize="20sp"/>
    </RelativeLayout>

</LinearLayout>