<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/parking"
    tools:context=".PlotOne">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:text= "@string/Date2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_Date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tv_Date"
            android:hint="Select Date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:id="@+id/tv_time"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/et_Time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="12dp"
            android:layout_toRightOf="@+id/tv_time"
            android:hint="Select Time"
            android:textAlignment="center"
            android:textColorHint="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Duration"
        android:id="@+id/duration"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

    <Spinner
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/spinner"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/duration"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />
</RelativeLayout>


    <RelativeLayout
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"

        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/slotOne"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:background="@drawable/button_color"
            android:text="@string/SlotOne"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/slotTwo"
            android:layout_width="130dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_color"
            android:textColor="@color/black"
            android:layout_toRightOf="@+id/slotOne"
            android:text="@string/SlotTwo" />

        <Button
            android:id="@+id/slotThree"
            android:layout_width="130dp"
            android:background="@drawable/button_color"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_height="70dp"
            android:layout_below="@+id/slotOne"
            android:text="@string/SlotThree" />

        <Button
            android:id="@+id/slotFour"
            android:layout_width="130dp"
            android:layout_marginLeft="10dp"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_color"
            android:textColor="@color/black"
            android:layout_below="@+id/slotTwo"
            android:layout_toRightOf="@+id/slotThree"
            android:text="@string/SlotFour" />


    </RelativeLayout>
    <TextView
        android:id="@+id/txtView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"/>


</LinearLayout>