<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:text="@string/header"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold" />
    <ImageView
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account"/>


    <EditText
        android:id="@+id/LoginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="duncherry@gmail.com"
        android:textSize="20sp"
        android:drawableStart="@drawable/ic_email_24"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:textColor="@color/black"
        android:hint="Password"
        android:drawableStart="@drawable/ic_password"
        android:textSize="20sp"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/signIn"
        android:layout_marginTop="10dp"
        android:text="@string/Sign_In"
        android:backgroundTint="@color/blue"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/white"
        android:text="@string/Sign_Up"
        android:backgroundTint="@color/blue"
        android:textSize="20sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="20sp"/>



</LinearLayout>